Configuração 3  do pipeline CI/CD

--- a/todo_project/.github/workflows/main.yml
+++ b/todo_project/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main  # Só dispara o pipeline para mudanças na branch principal
+      - master
 
 jobs:
   build:
