Configuração 4 do pipeline CI/CD

--- a/todo_project/.github/workflows/main.yml
+++ b/todo_project/.github/workflows/main.yml
@@ -3,7 +3,11 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main  # Só dispara o pipeline para mudanças na branch principal
+      - main
+      - master
+  pull_request:
+    branches:
+      - main
       - master
 
 jobs:
