--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r Task-Manager-using-Flask\todo_project\requirements.txt
+        pip install -r requirements.txt
 
     - name: Run tests
       run: |
