--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,42 @@
-name: CI/CD Pipeline
+stages:
+  - build
+  - test
+  - security_check
 
-on:
-  push:
-    branches:
-      - main
-      - master
-  pull_request:
-    branches:
-      - main
-      - master
+variables:
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  VENV_PATH: "$CI_PROJECT_DIR/venv"
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+cache:
+  paths:
+    - .cache/pip
+    - venv/
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+before_script:
+  - python3 -m venv $VENV_PATH
+  - source $VENV_PATH/bin/activate
+  - pip install -r requirements.txt
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10'
+build:
+  stage: build
+  script:
+    - echo "Compilação e setup do ambiente concluído."
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+test:
+  stage: test
+  script:
+    - pytest
 
-    - name: Run tests
-      run: |
-        python -m unittest discover
+bandit_security_scan:
+  stage: security_check
+  script:
+    - pip install bandit
+    - bandit -r C:\Users\user\estudo-de-caso
+  allow_failure: true
+
+dependency_check:
+  stage: security_check
+  script:
+    - java -version
+    - dependency-check --project "EstudoDeCaso" -s C:\Users\user\estudo-de-caso -o C:\Users\user\estudo-de-caso\relatorios
+  allow_failure: true
