--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ cache:
 
 before_script:
   - python3 -m venv $VENV_PATH
-  - source $VENV_PATH/bin/activate
+  - .\$VENV_PATH\Scripts\activate  # Alterado para Windows
   - pip install -r requirements.txt
 
 build:
@@ -31,12 +31,14 @@ bandit_security_scan:
   stage: security_check
   script:
     - pip install bandit
-    - bandit -r C:\Users\user\estudo-de-caso
+    - bandit -r "$CI_PROJECT_DIR"  # Alterado para usar variável
+
   allow_failure: true
 
 dependency_check:
   stage: security_check
   script:
     - java -version
-    - dependency-check --project "EstudoDeCaso" -s C:\Users\user\estudo-de-caso -o C:\Users\user\estudo-de-caso\relatorios
+    - dependency-check --project "EstudoDeCaso" -s "$CI_PROJECT_DIR" -o "$CI_PROJECT_DIR/relatorios"  # Alterado para usar variável
+
   allow_failure: true
