--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,42 @@
-name: CI Pipeline  # Nome do seu workflow
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-      - main  # Altere para o nome da sua branch principal
+      - main
+      - master
   pull_request:
     branches:
-      - main  # Altere para o nome da sua branch principal
+      - main
+      - master
 
 jobs:
   build:
-    runs-on: windows-latest  
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'  # Altere para a versão desejada
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
 
-      - name: Create virtual environment
-        run: |
-          python -m venv venv
-          echo "Virtual environment created."
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+    - name: Run tests
+      run: |
+        python -m unittest discover
 
-      - name: Install dependencies
-        run: |
-          .\venv\Scripts\activate  
-          pip install -r requirements.txt
+    - name: Run Bandit Security Scan
+      run: |
+        . venv/bin/activate
+        pip install bandit
+        bandit -r .
 
-      - name: Run tests
-        run: |
-          . venv/bin/activate
-          pytest
-
-      - name: Run Bandit Security Scan
-        run: |
-          . venv/bin/activate
-          pip install bandit
-          bandit -r .
-
-      - name: Run Dependency Check
-        run: |
-          echo "Running Dependency Check..."
-          dependency-check --project "EstudoDeCaso" -s . -o ./relatorios  # Use caminhos relativos
+    - name: Run Dependency Check
+      run: |
+        echo "Running Dependency Check..."
+        dependency-check --project "EstudoDeCaso" -s . -o ./relatorios  # Use caminhos relativos
