--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,78 @@
-name: CI/CD Pipeline
+name: CI Pipeline  # Nome do seu workflow
 
 on:
   push:
     branches:
-      - main
-      - master
+      - main  # Altere para o nome da sua branch principal
   pull_request:
     branches:
-      - main
-      - master
+      - main  # Altere para o nome da sua branch principal
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Ou windows-latest se preferir Windows
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10'
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'  # Altere para a versão desejada
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-    - name: Run tests
-      run: |
-        python -m unittest discover
+      - name: Create virtual environment
+        run: |
+          python -m venv venv
+          echo "Virtual environment created."
 
-    - name: Run Bandit Security Scan
-      run: |
-        . venv/bin/activate
-        pip install bandit
-        bandit -r .
+      - name: Install dependencies
+        run: |
+          . venv/bin/activate  # Para Linux
+          # Para Windows, use: .\venv\Scripts\activate
+          pip install -r requirements.txt
 
-    - name: Run Dependency Check
-      run: |
-        echo "Running Dependency Check..."
-        dependency-check --project "EstudoDeCaso" -s . -o ./relatorios  # Use caminhos relativos
+      - name: Run tests
+        run: |
+          . venv/bin/activate  # Para Linux
+          # Para Windows, use: .\venv\Scripts\activate
+          pytest
+
+  security-scan:
+    runs-on: ubuntu-latest  # Ou windows-latest se preferir Windows
+    needs: build  # Espera a conclusão do trabalho de build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'  # Altere para a versão desejada
+
+      - name: Create virtual environment
+        run: |
+          python -m venv venv
+          echo "Virtual environment created."
+
+      - name: Install Bandit
+        run: |
+          . venv/bin/activate  # Para Linux
+          pip install bandit==1.7.5
+
+      - name: Run Bandit Security Scan
+        run: |
+          . venv/bin/activate  # Para Linux
+          bandit -r .
+
+      - name: Install Dependency Check
+        run: |
+          # Adicione o código para baixar e configurar o dependency-check aqui
+          wget https://github.com/jeremylong/DependencyCheck/releases/download/v7.3.2/dependency-check-7.3.2-release.zip
+          unzip dependency-check-7.3.2-release.zip -d ./dependency-check
+          chmod +x ./dependency-check/bin/dependency-check.sh
+
+      - name: Run Dependency Check
+        run: |
+          ./dependency-check/bin/dependency-check.sh --project "EstudoDeCaso" -s . -o ./relatorios
