--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,33 +10,23 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Ou windows-latest se preferir Windows
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'  # Altere para a versão desejada
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
 
-      - name: Create virtual environment
-        run: |
-          python -m venv venv
-          echo "Virtual environment created."
-
-      - name: Install dependencies
-        run: |
-          . venv/bin/activate  # Para Linux
-          # Para Windows, use: .\venv\Scripts\activate
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: |
-          . venv/bin/activate  # Para Linux
-          # Para Windows, use: .\venv\Scripts\activate
-          pytest
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+    - name: Run tests
+      run: |
+        python -m unittest discover
 
   security-scan:
     runs-on: ubuntu-latest  # Ou windows-latest se preferir Windows
