--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,12 @@
-name: CI Pipeline  # Nome do seu workflow
+name: CI Pipeline  
 
 on:
   push:
     branches:
-      - main  # Altere para o nome da sua branch principal
+      - main 
   pull_request:
     branches:
-      - main  # Altere para o nome da sua branch principal
+      - main  
 
 jobs:
   build:
@@ -29,8 +29,8 @@ jobs:
         python -m unittest discover
 
   security-scan:
-    runs-on: ubuntu-latest  # Ou windows-latest se preferir Windows
-    needs: build  # Espera a conclusão do trabalho de build
+    runs-on: ubuntu-latest 
+    needs: build 
 
     steps:
       - name: Checkout code
@@ -39,7 +39,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'  # Altere para a versão desejada
+          python-version: '3.10' 
 
       - name: Create virtual environment
         run: |
@@ -53,13 +53,12 @@ jobs:
 
       - name: Run Bandit Security Scan
         run: |
-          . venv/bin/activate  # Para Linux
+          . venv/bin/activate  
           bandit -r .
         continue-on-error: true
 
       - name: Install Dependency Check
         run: |
-          # Adicione o código para baixar e configurar o dependency-check aqui
           wget https://github.com/jeremylong/DependencyCheck/releases/download/v7.3.2/dependency-check-7.3.2-release.zip
           unzip dependency-check-7.3.2-release.zip -d ./dependency-check
           ls -R ./dependency-check
@@ -67,3 +66,31 @@ jobs:
       - name: Run Dependency Check
         run: |
           ./dependency-check/dependency-check/bin/dependency-check.sh --project "EstudoDeCaso" -s . -o ./relatorios
+  
+  review:        
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout código
+      uses: actions/checkout@v3
+
+    - name: Configurar ambiente Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Instalar dependências
+      run: |
+        pip install -r requirements.txt
+
+    - name: Deploy para estágio
+      run: |
+        echo "Realizando deploy no ambiente de stage"
+        python run.py
+
+    - name: Verificação de segurança com OWASP ZAP
+      uses: zapbot/zap-api-action@v0.3.0
+      with:
+        target: 'http://localhost:5000'  
+        format: 'HTML'
+        output-path: './relatorios'
