--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main 
+      - deploy
   pull_request:
     branches:
-      - main  
+      - main 
+      - deploy 
 
 jobs:
   build:
