--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,5 +88,5 @@ jobs:
     
     - name: Deploy e Verificação de segurança
       run: |
-        chmod +x deploy.sh 
-        /.Ferramentas/deploy.sh  
+        chmod +x ./Ferramentas/deploy.sh 
+        ./Ferramentas/deploy.sh  
