--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,10 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    
+    - name: Pull OWASP ZAP Docker image
+      run: |
+        docker pull ghcr.io/zaproxy/zaproxy:stable 
+      
     - name: Deploy e Verificação de segurança
       run: |
         chmod +x ./Ferramentas/deploy.sh 
