--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,3 +93,12 @@ jobs:
       run: |
         chmod +x ./Ferramentas/deploy.sh 
         ./Ferramentas/deploy.sh  
+
+    - name: Check report for vulnerabilities
+      run: |
+        if grep -q "Vulnerabilities found" ./relatorios/report.html; then
+            echo "Vulnerabilidades encontradas!"
+            exit 1  # Sinaliza que houve um problema
+        else
+            echo "Nenhuma vulnerabilidade encontrada."
+        fi || true
