--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,9 +96,14 @@ jobs:
 
     - name: Check report for vulnerabilities
       run: |
-        if grep -q "Vulnerabilities found" ./relatorios/report.html; then
-            echo "Vulnerabilidades encontradas!"
-            exit 1  # Sinaliza que houve um problema
+        if [ -f ./relatorios/report.html ]; then
+          if grep -q "Vulnerabilities found" /zap/wrk/zap/wrk/report.html; then
+              echo "Vulnerabilidades encontradas!"
+              exit 1  # Sinaliza que houve um problema
+          else
+              echo "Nenhuma vulnerabilidade encontrada."
+          fi || true
         else
-            echo "Nenhuma vulnerabilidade encontrada."
+          echo "Arquivo de relatório não encontrado."
+          exit 1
         fi || true
