--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
       
     - name: Deploy e Verificação de segurança
       run: |
-        chmod +x ./Ferramentas/deploy.sh 
+        chmod 777 ./Ferramentas/deploy.sh 
         ./Ferramentas/deploy.sh  
 
     - name: Check report for vulnerabilities
