--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,7 @@ jobs:
   
   review:        
     runs-on: ubuntu-latest
+    needs: security-scan
 
     steps:
     - name: Checkout código
@@ -104,6 +105,7 @@ jobs:
 
   monitoring:
     runs-on: ubuntu-latest
+    needs: review
       
     steps:
       - name: Checkout code
