--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,6 +115,10 @@ jobs:
         run: |
           docker pull prom/prometheus
 
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
       - name: Start Application
         run: |
           nohup python ./todo_project/run.py & 
